syntax = "proto3";

package helloworld;
option go_package = "grpc2023/helloworld.proto/proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

service Greeter {
    // 一元调用
    rpc SayHello(HelloRequest) returns(HelloReply) {}
    //客户端流,上传文件场景
    rpc SayHelloClientStream(stream HelloRequest) returns(HelloReply) {}
    //服务端流,下载文件场景
    rpc SayHelloServerStream(HelloRequest) returns(stream HelloReply) {}
    //双向流，机器人客服场景
    rpc SayHelloTwoWayStream(HelloRequest) returns(stream HelloReply) {}

}

enum Gender {
    // 女
    FEMALE = 0;
    // 男
    MALE = 1;
    // 第三性别
    THIRD = 2;
    // 未知
    UNKNOWN = 3;
    reserved 4;
}

message HelloRequest{
    //    [1 ~ 15] 占一个字节
    string name = 1;
    Gender gender = 2;
    uint32 age = 3;
    google.protobuf.Timestamp birthday = 4;
    Address addr = 7;
    repeated string hobys = 8;
    map<string,google.protobuf.Any> data = 9;
    reserved 5,6, 18 to 50;
    reserved "phone","email";
}

message Address {
    string province = 1;
    string city = 2;
}


message HelloReply{
    string msg = 1;
}